--- a/window-shopper/Base.lproj/Main.storyboard
+++ b/window-shopper/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                     <constraint firstAttribute="height" constant="40" id="8aM-En-Xdq"/>
                                 </constraints>
                                 <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Item price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zmg-VN-Zd2" customClass="CurrencyTxtField" customModule="window_shopper" customModuleProvider="target">
@@ -43,30 +43,69 @@
                                     <constraint firstAttribute="height" constant="40" id="jVO-vW-hH5"/>
                                 </constraints>
                                 <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Umh-zT-jA7">
+                                <rect key="frame" x="36" y="300" width="303" height="61"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="52"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hours" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dSb-bb-B0Z">
+                                <rect key="frame" x="134.5" y="362" width="106" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="Mdu-d0-DoS"/>
+                                    <constraint firstAttribute="width" constant="106" id="NEJ-lN-LeK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fuj-oe-JXu">
+                                <rect key="frame" x="32" y="605" width="311" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Krz-gW-rKj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                <state key="normal" title="Clear Calculator">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="clearCalculatorPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LyE-oj-chD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fuj-oe-JXu" secondAttribute="trailing" constant="32" id="0mN-c7-wZX"/>
                             <constraint firstItem="Zmg-VN-Zd2" firstAttribute="height" secondItem="VK3-kh-7DR" secondAttribute="height" id="33d-cz-kUp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fuj-oe-JXu" secondAttribute="bottom" constant="32" id="6wT-BH-4mf"/>
                             <constraint firstItem="rn5-Qz-9HJ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="85W-wg-24Q"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VK3-kh-7DR" secondAttribute="trailing" constant="36" id="CAC-dx-vza"/>
+                            <constraint firstItem="Umh-zT-jA7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CsB-og-zC8"/>
+                            <constraint firstItem="dSb-bb-B0Z" firstAttribute="top" secondItem="Umh-zT-jA7" secondAttribute="bottom" constant="1" id="Duc-YJ-5mB"/>
                             <constraint firstItem="Zmg-VN-Zd2" firstAttribute="top" secondItem="VK3-kh-7DR" secondAttribute="bottom" constant="25" id="EbL-BR-UUz"/>
                             <constraint firstItem="rn5-Qz-9HJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="KwH-gy-acc"/>
                             <constraint firstItem="PXI-dQ-CB4" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="NGe-5l-Cw2"/>
+                            <constraint firstItem="Umh-zT-jA7" firstAttribute="width" secondItem="Zmg-VN-Zd2" secondAttribute="width" id="OzU-4l-2Gq"/>
                             <constraint firstItem="Zmg-VN-Zd2" firstAttribute="leading" secondItem="VK3-kh-7DR" secondAttribute="leading" id="Pg8-17-51X"/>
                             <constraint firstItem="PXI-dQ-CB4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RWu-Lb-ZHw"/>
+                            <constraint firstItem="Umh-zT-jA7" firstAttribute="top" secondItem="Zmg-VN-Zd2" secondAttribute="bottom" constant="45" id="TAm-NE-S9s"/>
                             <constraint firstItem="rn5-Qz-9HJ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="US9-us-QZO"/>
                             <constraint firstItem="Zmg-VN-Zd2" firstAttribute="trailing" secondItem="VK3-kh-7DR" secondAttribute="trailing" id="W2w-Zb-XZq"/>
                             <constraint firstItem="VK3-kh-7DR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="36" id="Xiu-On-CwQ"/>
                             <constraint firstItem="VK3-kh-7DR" firstAttribute="top" secondItem="PXI-dQ-CB4" secondAttribute="bottom" constant="35" id="c0T-cK-wsT"/>
+                            <constraint firstItem="fuj-oe-JXu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="dUy-v9-GwV"/>
+                            <constraint firstItem="dSb-bb-B0Z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lbU-RS-9V8"/>
                             <constraint firstItem="rn5-Qz-9HJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rCK-Li-Qzr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="hoursLbl" destination="dSb-bb-B0Z" id="7D6-IC-QnC"/>
                         <outlet property="priceTxt" destination="Zmg-VN-Zd2" id="auX-Gw-W1y"/>
+                        <outlet property="resultLbl" destination="Umh-zT-jA7" id="kTg-CL-c7T"/>
                         <outlet property="wageTxt" destination="VK3-kh-7DR" id="bMY-E1-xbs"/>
                     </connections>
                 </viewController>
